--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    border: none; 
-}
-
-body {
-    font-family: 'Montserrat', sans-serif; }
-
 header {
   background-color: #EBEDEF 30%; }
 
@@ -17,8 +7,7 @@ header {
 .navbar-light .navbar-nav .nav-link {
   color: #08948d;
   text-decoration: none; }
-
-.navbar-light .navbar-nav .nav-link :hover {
+  .navbar-light .navbar-nav .nav-link :hover {
     color: orange; }
 
 .pie {
@@ -45,51 +34,14 @@ header {
 a:hover {
   color: orange; }
 
-  p {
-    line-height: 1.5; }
-  
-h1 {
-    font-size: 35px;
-    color: #42929D;
-    font-family: 'Dancing Script', cursive;
-    font-weight: 700;
-    text-align: center; }
-  
-h2 {
-    font-size: 22px;
-    color: teal; }
-  
-h3 {
-    font-size: 18px;
-    color: #003366;
-    margin: 20px 0px 20px 0px;
-    font-weight: 600; }
-  
-h4 {
-    color: #282923;
-    background-color: #e26601;
-    margin-top: 6px;
-    padding: 7px 20px; }
-  
-.destacado {
-    color: #e26601;
-    font-weight: bold;
-    font-size: 17px; }
-  
-.texto1 {
-    margin-top: 20px; }
-  
-.caja--In {
-    animation: fadeIn 2s; }
-  
-.caja--InUp {
-    animation: fadeInUp 2s; }
-  
-.caja--Pulses {
-    animation: pulse 3s; }
-  
-.caja--Flip {
-    animation: flipInY 2s; }
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  border: none; }
+
+body {
+  font-family: 'Montserrat', sans-serif; }
 
 .cajaImg {
   margin: auto;
@@ -217,8 +169,51 @@ h4 {
   h3 {
     font-size: 20px; }
   p {
-    font-size: 16px; } 
-}
+    font-size: 16px; } }
 
 /* ------------------- FIN 768 --------------------------------------------------------------*/
+p {
+  line-height: 1.5; }
 
+h1 {
+  font-size: 35px;
+  color: #42929D;
+  font-family: 'Dancing Script', cursive;
+  font-weight: 700;
+  text-align: center; }
+
+h2 {
+  font-size: 22px;
+  color: teal; }
+
+h3 {
+  font-size: 18px;
+  color: #003366;
+  margin: 20px 0px 20px 0px;
+  font-weight: 600; }
+
+h4 {
+  color: #282923;
+  background-color: #e26601;
+  margin-top: 6px;
+  padding: 7px 20px; }
+
+.destacado {
+  color: #e26601;
+  font-weight: bold;
+  font-size: 17px; }
+
+.texto1 {
+  margin-top: 20px; }
+
+.caja--In {
+  animation: fadeIn 2s; }
+
+.caja--InUp {
+  animation: fadeInUp 2s; }
+
+.caja--Pulses {
+  animation: pulse 3s; }
+
+.caja--Flip {
+  animation: flipInY 2s; }
