cambios de estilos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,9 +35,9 @@ a:hover {
   color: orange; }
 
 * {
+  text-decoration: none !important;
   margin: 0;
   padding: 0;
-  text-decoration: none;
   border: none; }
 
 body {
