--- a/scss/archivo.scss
+++ b/scss/archivo.scss
@@ -3,4 +3,4 @@
 @import "general.scss"; 
 @import "contenido.scss";
 @import "textos.scss";
-@import "animaciones.scss"
+@import "animaciones.scss";
