ajuste de imagenes

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -118,7 +118,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background-image: url(../imagenes/fondo2.jpg); }
+  background-image: url(../imagenes/fondo2-.jpg); }
 
 .imgHistoria {
   width: 290px;
