--- a/scss/contenido.scss
+++ b/scss/contenido.scss
@@ -95,7 +95,7 @@ margin: auto;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	background-image: url(../imagenes/fondo2.jpg);
+	background-image: url(../imagenes/fondo2-.jpg);
 		  }
   
   .imgHistoria {
