--- a/scss/animaciones.scss
+++ b/scss/animaciones.scss
@@ -10,3 +10,12 @@ $animaciones: (
    animation: $efecto;
 }
 }
+
+.zoom {
+	transition: transform .2s; 
+	margin: 0 auto;
+  }
+  
+  .zoom:hover {
+	transform: scale(1.3); 
+  }
