--- a/scss/contenido.scss
+++ b/scss/contenido.scss
@@ -1,26 +1,29 @@
 
-
+/* ---Seccion Home-------------------*/ 
 
 .cajaImg {
 	margin: auto;
 	width: 100%;
-	margin-bottom: 10px;
+	margin-bottom: 15px;
+	padding: 10px;
 }
+
 .bordeCarrousel {
-	border-bottom-left-radius: 50px;
-	border-bottom-right-radius: 50px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 	}
 
+.carousel-control-prev-icon {
+		background-image: url("../imagenes/boton-prev.svg");
+	}
+	
+.carousel-control-next-icon {
+		background-image: url("../imagenes/boton-next.svg");
+	}
 
 .cajaTitular {
 	overflow: hidden;
 	margin: auto;
-	background-color:white;
-	position: relative;
-	bottom: 120px;
-	border-top-left-radius: 20px;
-	border-top-right-radius: 20px ;
-	z-index: 200;
 }
 
 .cajaTextIndex{
@@ -28,17 +31,71 @@
 	margin: auto;
 }
 
+.videoHome {
+	overflow: hidden;
+	margin: auto;
+	margin-bottom: 15px;
+}
+
+.fondoVideo {
+	background-image: url("../imagenes/fondovideo1.png");
+	background-repeat: no-repeat;
+	position: relative;
+}
+
+
+/* ---Seccion QUE ES--------------------*/ 
+
+.cajaQueEs{
+	margin-top:30px ;
+	margin-bottom: 30px;
+	text-align: center;
+}
+
+.texto1 {
+	margin-bottom: 40px;
+}
+
+/* ---estilos Acordion--------------------*/ 
+
+
+.acordion1A{
+	background-color:rgb(228, 132, 88);
+	color: black;
+	box-shadow: black;
+	margin-bottom: 15px;
+	text-align: left !important;
+}
+.acordion2A{
+	background-color:rgb(118, 202, 202);
+	color: black;
+	box-shadow: black;
+	margin-bottom: 15px;
+	text-align: left !important;
+}
+
+.acordion3A{
+	background-color:rgb(218, 185, 80);
+	color: black;
+	box-shadow: black;
+	margin-bottom: 15px;
+	text-align: left !important;
+}
+
+
+	/* --- Seccion PRODUCCION --------------------*/ 
+
+
 .cajaVideo {
-    background-color: #93dce9;
-    text-align: center;
-    border-radius:10px;
-    transition: height 2s;
-    margin: 20px;
-    padding: 10px;
-    animation: flipInX 3.5s ;
-    }
-	
-.cajaVideo__a:hover {
+	background-color: #93dce9;
+	text-align: center;
+	border-radius:10px;
+	transition: height 2s;
+	margin: 20px;
+	padding: 10px;
+	animation: flipInX 3.5s;
+	}
+a:hover .cajaVideo{
   background-color: #FFD764;
   cursor: pointer;
   }
@@ -48,44 +105,6 @@ width: 100%;
 margin: auto;
 }
 
-.cajaVideo__titulo{
-    color:red;
-    font-family: 'Dancing Script', cursive;
-	font-size: 35px;
-}
-
-
-/* ---estilos Acordion--------------------*/ 
-
-
-.acordion1A{
-	background-color:rgb(228, 132, 88);
-	color: black;
-	box-shadow: black;
-
-}
-.acordion2A{
-	background-color:rgb(118, 202, 202);
-	color: black;
-	box-shadow: black;
-
-}
-
-.acordion3A{
-	background-color:rgb(218, 185, 80);
-	color: black;
-	box-shadow: black;
-}
-
-/* ---Seccion QUE ES--------------------*/ 
-
-.cajaQueEs{
-	margin-top:20px ;
-	margin-bottom: 30px;
-	margin-left: 10px;
-	margin-right: 10px;
-	text-align: center;
-}
 
 /* --- Seccion HISTORIA --------------------*/ 
 
@@ -96,24 +115,40 @@ margin: auto;
 	justify-content: space-between;
 	align-items: center;
 	background-image: url(../imagenes/fondo2-.jpg);
+	padding: 15px;
+	margin-top: 60px;
 		  }
   
   .imgHistoria {
 	width: 290px;
 	border-radius:10px;
 	margin: 20px;
+	padding: 5px;
 	animation: fadeInUp 3.5s ;
 		  }
+
+	.cajaTexHistoria {
+		margin-top: 25px;
+		margin-bottom: 25px;
+	}
+
+
   
 	/* --- Seccion INFORMACION --------------------*/ 
 
 .columnaInfo {
 	padding: 20px;
-	background-color: #ffdc7c;
 	border-radius:10px;
-  margin: 10px;
-  animation: fadeIn 2s ;
+	background-color: #ffe8a4;
+	margin: 20px;
+  	animation: fadeInUp 2s ;
 	}
+
+.cajaSubtitulo {
+	height: 50px;
+	margin: auto;
+	padding: auto;
+}
 
 .imgInfo {
 	margin-bottom: 20px;
@@ -122,58 +157,3 @@ margin: auto;
 	}
 
 
-/* -------------------768 --------------------------------------------------------------*/ 
-
-@media only screen and (min-width: 768px) {
-
-
-	/* --- Seccion HOME--------------------*/ 
-	
-	.bordeCarrousel {
-		border-bottom-left-radius: 50px;
-		border-bottom-right-radius: 50px;
-		}
-	
-	
-	.aHome {
-		overflow: hidden;
-		margin: auto;
-		background-color:white;
-		position: relative;
-		bottom: 120px;
-		border-top-left-radius: 20px;
-		border-top-right-radius: 20px ;
-		z-index: 200;
-	}
-	
-	/* --- Seccion HISTORIA --------------------*/ 
-	
-		   .cajaImgHistoria {
-			flex-direction: row;
-			flex-wrap: wrap;
-			justify-content: space-evenly;
-			  }
-	
-	/* --- Estilos TEXTO --------------------*/ 
-	
-	h1{ 
-		font-size: 45px;
-		margin-top: 10px;
-		padding: 10px;
-	}
-	
-	h2 {
-		font-size: 25px;
-		}
-			
-	h3 {
-		font-size: 20px;
-		}
-	
-	p {
-		font-size: 16px;
-	}
-	
-	 }
-	
-	  /* ------------------- FIN 768 --------------------------------------------------------------*/ 
