--- a/scss/contenido.scss
+++ b/scss/contenido.scss
@@ -83,33 +83,10 @@
 }
 
 
-	/* --- Seccion PRODUCCION --------------------*/ 
-
-
-.cajaVideo {
-	background-color: #93dce9;
-	text-align: center;
-	border-radius:10px;
-	transition: height 2s;
-	margin: 20px;
-	padding: 10px;
-	animation: flipInX 3.5s;
-	}
-a:hover .cajaVideo{
-  background-color: #FFD764;
-  cursor: pointer;
-  }
-
-.cajaVideo__img{
-width: 100%;
-margin: auto;
-}
-
-
 /* --- Seccion HISTORIA --------------------*/ 
 
    
-  .cajaImgHistoria {
+.cajaImgHistoria {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -131,9 +108,38 @@ margin: auto;
 		margin-top: 25px;
 		margin-bottom: 25px;
 	}
+ 
 
 
-  
+	/* --- Seccion PRODUCCION --------------------*/ 
+
+
+.cajaVideo {
+	background-color: #93dce9;
+	text-align: center;
+	border-radius:10px;
+	transition: height 2s;
+	margin: 10px;
+	padding: 10px;
+	animation: flipInX 3.5s;
+	}
+
+	a:hover .cajaVideo{
+  	background-color: #FFD764;
+  	cursor: pointer;
+ 	}
+
+	.cajaVideo__img{
+	width: 100%;
+	margin: auto;
+	}
+
+	.cajaTexProduccion {
+		margin-top: 15px;
+		margin-bottom: 15px;
+
+	}
+
 	/* --- Seccion INFORMACION --------------------*/ 
 
 .columnaInfo {
