https://orosanto.github.io/mi_repositorio/

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -163,7 +163,7 @@ a:hover .cajaVideo {
 .columnaInfo {
   padding: 20px;
   border-radius: 10px;
-  background-color: #ffe8a4;
+  background-color: #fff564;
   margin: 20px;
   animation: fadeInUp 2s; }
 
