--- a/scss/contenido.scss
+++ b/scss/contenido.scss
@@ -145,7 +145,7 @@
 .columnaInfo {
 	padding: 20px;
 	border-radius:10px;
-	background-color: #ffe8a4;
+	background-color: #fff564;
 	margin: 20px;
   	animation: fadeInUp 2s ;
 	}
