https://orosanto.github.io/mi_repositorio/

--- a/scss/contenido.scss
+++ b/scss/contenido.scss
@@ -145,7 +145,7 @@
 .columnaInfo {
 	padding: 20px;
 	border-radius:10px;
-	background-color: #fff564;
+	background-color:#FFD764;
 	margin: 20px;
   	animation: fadeInUp 2s ;
 	}
