--- a/css/estilos.css
+++ b/css/estilos.css
@@ -163,7 +163,7 @@ a:hover .cajaVideo {
 .columnaInfo {
   padding: 20px;
   border-radius: 10px;
-  background-color: #FFD764;
+  background-color: #ffd864;
   margin: 20px;
   animation: fadeInUp 2s; }
 
